# blender-launcher

./: Cargo.toml  README.md  rustfmt.toml
i18n/de/: blender_launcher.ftl
i18n/en/: blender_launcher.ftl
src/: app.rs  blender.rs  error.rs  font.rs  i18n.rs  main.rs  theme.rs  utils.rs  widgets.rs
